(rule
 (with-stdout-to
  opam-compiler.txt.gen
  (run opam-compiler --help=plain)))

(rule
 (alias runtest)
 (action
  (diff opam-compiler.txt opam-compiler.txt.gen)))

(rule
 (with-stdout-to
  create.txt.gen
  (run opam-compiler create --help=plain)))

(rule
 (alias runtest)
 (action
  (diff create.txt create.txt.gen)))

(rule
 (with-stdout-to
  reinstall.txt.gen
  (run opam-compiler reinstall --help=plain)))

(rule
 (alias runtest)
 (action
  (diff reinstall.txt reinstall.txt.gen)))
