(rule
 (with-stdout-to
  opam-compiler.txt.gen
  (run opam-compiler --help=plain)))

(rule
 (alias runtest)
 (action
  (diff opam-compiler.txt opam-compiler.txt.gen)))

(rule
 (with-stdout-to
  create.txt.gen
  (run opam-compiler create --help=plain)))

(rule
 (alias runtest)
 (action
  (diff create.txt create.txt.gen)))

(rule
 (with-stdout-to
  configure.txt.gen
  (run opam-compiler configure --help=plain)))

(rule
 (alias runtest)
 (action
  (diff configure.txt configure.txt.gen)))

(rule
 (with-stdout-to
  install.txt.gen
  (run opam-compiler install --help=plain)))

(rule
 (alias runtest)
 (action
  (diff install.txt install.txt.gen)))
